--- a/web/index.html
+++ b/web/index.html
@@ -772,7 +772,7 @@
                                  x-data="{
                                      open: false,
                                      highlightedIndex: 0,
-                                     menuStyle: 'right: 0px; left: auto; top: calc(100% + 6px); bottom: auto;',
+                                     menuStyle: 'right: 0px; left: auto; top: calc(100% + 6px); bottom: auto; max-height: 280px; --sort-menu-origin: top right;',
                                      options: [
                                          { value: 'newest', label: '最新优先' },
                                          { value: 'oldest', label: '最早优先' },
@@ -806,28 +806,37 @@
 
                                          let horizontal = 'right: 0px; left: auto;';
                                          let vertical = `top: calc(100% + ${menuGap}px); bottom: auto;`;
+                                         let alignLeft = false;
 
                                          const rightAlignedLeft = triggerRect.right - menuRect.width;
                                          if (rightAlignedLeft < viewportPadding) {
                                              const leftAlignedRight = triggerRect.left + menuRect.width;
                                              if (leftAlignedRight <= window.innerWidth - viewportPadding) {
                                                  horizontal = 'left: 0px; right: auto;';
+                                                 alignLeft = true;
                                              } else {
                                                  const safeLeft = Math.max(
                                                      viewportPadding,
                                                      Math.min(triggerRect.left, window.innerWidth - viewportPadding - menuRect.width)
                                                  );
                                                  horizontal = `left: ${Math.round(safeLeft - triggerRect.left)}px; right: auto;`;
+                                                 alignLeft = true;
                                              }
                                          }
 
-                                         const spaceBelow = window.innerHeight - triggerRect.bottom;
-                                         const spaceAbove = triggerRect.top;
-                                         if (spaceBelow < menuRect.height + viewportPadding && spaceAbove > menuRect.height + viewportPadding) {
+                                         const spaceBelow = window.innerHeight - triggerRect.bottom - viewportPadding - menuGap;
+                                         const spaceAbove = triggerRect.top - viewportPadding - menuGap;
+                                         const shouldOpenUpward = spaceBelow < menuRect.height && spaceAbove > spaceBelow;
+                                         if (shouldOpenUpward) {
                                              vertical = `bottom: calc(100% + ${menuGap}px); top: auto;`;
                                          }
 
-                                         this.menuStyle = `${horizontal} ${vertical}`;
+                                         const availableHeight = Math.max(120, shouldOpenUpward ? spaceAbove : spaceBelow);
+                                         const maxHeight = Math.min(320, Math.floor(availableHeight));
+                                         const originVertical = shouldOpenUpward ? 'bottom' : 'top';
+                                         const originHorizontal = alignLeft ? 'left' : 'right';
+
+                                         this.menuStyle = `${horizontal} ${vertical} max-height: ${maxHeight}px; --sort-menu-origin: ${originVertical} ${originHorizontal};`;
                                      },
                                      focusHighlightedOption() {
                                          const optionId = `session-sort-option-${this.highlightedIndex}`;
@@ -2050,7 +2059,7 @@
                                  x-data="{
                                      open: false,
                                      highlightedIndex: 0,
-                                     menuStyle: 'right: 0px; left: auto; top: calc(100% + 6px); bottom: auto;',
+                                     menuStyle: 'right: 0px; left: auto; top: calc(100% + 6px); bottom: auto; max-height: 280px; --sort-menu-origin: top right;',
                                      options: [
                                          { value: 'newest', label: '最新优先' },
                                          { value: 'oldest', label: '最早优先' }
@@ -2082,28 +2091,37 @@
 
                                          let horizontal = 'right: 0px; left: auto;';
                                          let vertical = `top: calc(100% + ${menuGap}px); bottom: auto;`;
+                                         let alignLeft = false;
 
                                          const rightAlignedLeft = triggerRect.right - menuRect.width;
                                          if (rightAlignedLeft < viewportPadding) {
                                              const leftAlignedRight = triggerRect.left + menuRect.width;
                                              if (leftAlignedRight <= window.innerWidth - viewportPadding) {
                                                  horizontal = 'left: 0px; right: auto;';
+                                                 alignLeft = true;
                                              } else {
                                                  const safeLeft = Math.max(
                                                      viewportPadding,
                                                      Math.min(triggerRect.left, window.innerWidth - viewportPadding - menuRect.width)
                                                  );
                                                  horizontal = `left: ${Math.round(safeLeft - triggerRect.left)}px; right: auto;`;
+                                                 alignLeft = true;
                                              }
                                          }
 
-                                         const spaceBelow = window.innerHeight - triggerRect.bottom;
-                                         const spaceAbove = triggerRect.top;
-                                         if (spaceBelow < menuRect.height + viewportPadding && spaceAbove > menuRect.height + viewportPadding) {
+                                         const spaceBelow = window.innerHeight - triggerRect.bottom - viewportPadding - menuGap;
+                                         const spaceAbove = triggerRect.top - viewportPadding - menuGap;
+                                         const shouldOpenUpward = spaceBelow < menuRect.height && spaceAbove > spaceBelow;
+                                         if (shouldOpenUpward) {
                                              vertical = `bottom: calc(100% + ${menuGap}px); top: auto;`;
                                          }
 
-                                         this.menuStyle = `${horizontal} ${vertical}`;
+                                         const availableHeight = Math.max(120, shouldOpenUpward ? spaceAbove : spaceBelow);
+                                         const maxHeight = Math.min(320, Math.floor(availableHeight));
+                                         const originVertical = shouldOpenUpward ? 'bottom' : 'top';
+                                         const originHorizontal = alignLeft ? 'left' : 'right';
+
+                                         this.menuStyle = `${horizontal} ${vertical} max-height: ${maxHeight}px; --sort-menu-origin: ${originVertical} ${originHorizontal};`;
                                      },
                                      focusHighlightedOption() {
                                          const optionId = `report-sort-option-${this.highlightedIndex}`;
@@ -2401,12 +2419,12 @@
                                         </button>
                                         <!-- 下拉菜单 -->
                                         <div x-show="downloadMenuOpen"
-                                             x-transition:enter="transition ease-out duration-150"
-                                             x-transition:enter-start="opacity-0 transform scale-95 -translate-y-2"
+                                             x-transition:enter="transition ease-out duration-200"
+                                             x-transition:enter-start="opacity-0 transform scale-95 -translate-y-1.5"
                                              x-transition:enter-end="opacity-100 transform scale-100 translate-y-0"
-                                             x-transition:leave="transition ease-in duration-100"
+                                             x-transition:leave="transition ease-in duration-150"
                                              x-transition:leave-start="opacity-100 transform scale-100 translate-y-0"
-                                             x-transition:leave-end="opacity-0 transform scale-95 -translate-y-2"
+                                             x-transition:leave-end="opacity-0 transform scale-95 -translate-y-1.5"
                                              class="absolute right-0 mt-2 w-48 bg-white rounded-xl shadow-lg border border-gray-200 py-2 z-50">
                                             <!-- Markdown 格式 -->
                                             <button @click="downloadReport('md'); downloadMenuOpen = false"
@@ -2763,7 +2781,7 @@
                             </div>
                             <!-- 悬停提示 -->
                             <div x-show="hoveredDepthMode"
-                                 x-transition:enter="transition ease-out duration-150"
+                                 x-transition:enter="transition ease-out duration-200"
                                  x-transition:enter-start="opacity-0 translate-y-1"
                                  x-transition:enter-end="opacity-100 translate-y-0"
                                  class="absolute left-0 right-0 mt-2 p-2 bg-gray-800 text-white text-xs rounded-lg shadow-lg z-10">
@@ -3386,10 +3404,10 @@
 
         <!-- Toast 通知 -->
         <div x-show="toast.show"
-             x-transition:enter="transition ease-out duration-300"
+             x-transition:enter="transition ease-out duration-200"
              x-transition:enter-start="opacity-0 translate-y-2"
              x-transition:enter-end="opacity-100 translate-y-0"
-             x-transition:leave="transition ease-in duration-200"
+             x-transition:leave="transition ease-in duration-150"
              x-transition:leave-start="opacity-100 translate-y-0"
              x-transition:leave-end="opacity-0 translate-y-2"
              class="fixed bottom-6 right-6 z-50">
