fix: 进一步打磨菜单与多选微交互细节
- 主题菜单：统一过渡节奏与位移动效，提升开合过程的轻盈感与一致性。

- 排序下拉：将选中勾选改为占位显隐动画，避免选中切换时文本与布局抖动。

- 可访问性：增强批量复选框 focus-visible 环形反馈，深色模式下保持清晰可见。

--- a/web/index.html
+++ b/web/index.html
@@ -630,7 +630,12 @@
                         </button>
                         <div x-cloak
                              x-show="showThemeMenu"
-                             x-transition.opacity.scale.90
+                             x-transition:enter="transition ease-out duration-200"
+                             x-transition:enter-start="opacity-0 -translate-y-1 scale-95"
+                             x-transition:enter-end="opacity-100 translate-y-0 scale-100"
+                             x-transition:leave="transition ease-in duration-150"
+                             x-transition:leave-start="opacity-100 translate-y-0 scale-100"
+                             x-transition:leave-end="opacity-0 -translate-y-1 scale-95"
                              @click.outside="showThemeMenu = false"
                              class="theme-menu absolute right-0 mt-2 w-36 rounded-xl border border-gray-200 bg-white p-1.5 shadow-lg z-50">
                             <button @click="setThemeMode('light')"
@@ -941,9 +946,8 @@
                                                     highlightedIndex === index ? 'sort-dropdown-option--highlight' : ''
                                                 ]">
                                             <span x-text="option.label"></span>
-                                            <svg x-show="sessionSortOrder === option.value"
-                                                 x-cloak
-                                                 class="w-3.5 h-3.5"
+                                            <svg class="sort-dropdown-check w-3.5 h-3.5"
+                                                 :class="sessionSortOrder === option.value ? 'opacity-100 scale-100' : 'opacity-0 scale-90'"
                                                  fill="none"
                                                  stroke="currentColor"
                                                  viewBox="0 0 24 24"
@@ -2226,9 +2230,8 @@
                                                     highlightedIndex === index ? 'sort-dropdown-option--highlight' : ''
                                                 ]">
                                             <span x-text="option.label"></span>
-                                            <svg x-show="reportSortOrder === option.value"
-                                                 x-cloak
-                                                 class="w-3.5 h-3.5"
+                                            <svg class="sort-dropdown-check w-3.5 h-3.5"
+                                                 :class="reportSortOrder === option.value ? 'opacity-100 scale-100' : 'opacity-0 scale-90'"
                                                  fill="none"
                                                  stroke="currentColor"
                                                  viewBox="0 0 24 24"
